fix jsonserializable not generating for collection dto types
